bindings/flutter_tessera/android/src/main/cpp/include/tessera.h


typedef struct TesseraEngine TesseraEngine;
typedef uint32_t TesseraDefId;    
typedef uint64_t TesseraEntityId; 
typedef uint64_t TesseraTileId;   
typedef uint64_t TesseraCardId;   
typedef uint64_t TesseraCardDrawId;
typedef uint64_t TesseraHandId;   
typedef uint64_t TesseraDiceId;   
typedef enum {
    TESSERA_LOG_TRACE = 0,
    TESSERA_LOG_DEBUG = 1,
    TESSERA_LOG_INFO  = 2,
    TESSERA_LOG_WARN  = 3,
    TESSERA_LOG_ERROR = 4
} TesseraLogLevel;
typedef void (*TesseraLogFn)(void* userdata, int level, const char* msg);
typedef struct {
    void*  native_window;       
    int    width, height;       
    float  pixel_density;       
    bool   engine_driven_loop;  
    bool   debug;               
    TesseraLogFn log;           
    void*  log_userdata;
} TesseraConfig;
typedef struct {
    const void* data;       
    size_t      size;
    const char* path;       
    const char* debug_name; 
} TesseraBytes;
typedef struct { float u0, v0, u1, v1; } TesseraRect;
typedef struct {
    TesseraDefId atlas;          
    TesseraRect  top, side, bottom;
    float        tint[4];        
    float        thickness;      
} TesseraTileDef;
typedef struct {
    TesseraBytes gltf;           
    TesseraDefId atlas;          
    float        scale;          
    float        pivot[3];       
    int32_t      default_anim;
    int32_t      move_anim;
    int32_t      spawn_anim;
    int32_t      despawn_anim;
    TesseraDefId on_spawn_effect;
    TesseraDefId on_despawn_effect;
} TesseraEntityDef;
typedef enum { TESSERA_EMIT_BURST = 0, TESSERA_EMIT_CONTINUOUS = 1 } TesseraEmitMode;
typedef enum { TESSERA_BLEND_ALPHA = 0, TESSERA_BLEND_ADD = 1 } TesseraBlendMode;
typedef struct {
    TesseraDefId     atlas;        
    TesseraRect      sprite;
    TesseraEmitMode  mode;
    uint32_t         count;        
    float            lifetime_s, lifetime_var;
    float            speed, speed_var;
    float            spread_deg;   
    float            gravity;      
    float            size_start, size_end;
    float            color_start[4], color_end[4];
    TesseraBlendMode blend;
    float            duration_s;   
} TesseraParticleSpec;
typedef struct {
    TesseraParticleSpec on_add;
    TesseraParticleSpec on_remove;
} TesseraEffectDef;
typedef struct { int32_t x, y; } TesseraCoord;
typedef struct { float x, y; } TesseraCoordF;
typedef struct {
    TesseraCoord  coord;
    TesseraDefId  tile_def;  
    uint32_t      variant;   
    TesseraTileId id;        
} TesseraTilePlacement;
typedef struct {
    TesseraEntityId id;      
    TesseraDefId    def;
    TesseraCoord    coord;
    uint16_t        facing;  
    uint32_t        anim;    
    const TesseraCoord* path;
    uint32_t            path_count;
} TesseraEntityPlacement;
typedef struct {
    TesseraEntityId id;
    TesseraDefId    def;
    TesseraCoord    coord;
    TesseraEntityId attach_entity_id; 
} TesseraEffectPlacement;
typedef struct {
    TesseraDiceId id;
    TesseraDefId  def;
    uint32_t      face;
    float         position[3];
    uint32_t      seed;
    float         throw_s;
} TesseraDicePlacement;
typedef struct {
    TesseraCardId id;
    TesseraDefId  def;
    float         position[3];
    float         orientation[4]; 
    bool          hidden;
    TesseraHandId hand;           
    uint32_t      hand_slot;
    TesseraCardDrawId source_draw;
    const float*  path;
    uint32_t      path_count;
} TesseraCardPlacement;
typedef struct {
    TesseraCardDrawId id;
    TesseraDefId      def;
    float             position[3];
    float             orientation[4]; 
    uint32_t          count;
    bool              top_hidden;
} TesseraCardDrawPlacement;
typedef struct {
    TesseraHandId id;
    float         position[3];
    float         orientation[4]; 
    float         spread_deg;
    float         radius;
    float         card_spacing;
} TesseraHandPlacement;
typedef struct {
    TesseraCoordF focus;        
    float distance, yaw, pitch; 
    float fov;                  
} TesseraCamera;
typedef struct {
    const TesseraTilePlacement*   tiles;    size_t tile_count;
    const TesseraEntityPlacement* entities; size_t entity_count;
    const TesseraEffectPlacement* effects;  size_t effect_count;
    TesseraCamera camera;
    uint64_t      epoch;        
    const TesseraCardPlacement*     cards;      size_t card_count;
    const TesseraCardDrawPlacement* card_draws; size_t card_draw_count;
    const TesseraHandPlacement*     hands;      size_t hand_count;
    const TesseraDicePlacement*     dice;       size_t dice_count;
} TesseraState;
typedef struct {
    bool            hit_tile;
    TesseraCoord    tile;            
    float           tile_distance;   
    bool            hit_entity;
    TesseraEntityId entity;          
    float           entity_distance; 
    float           ray_origin[3];   
    float           ray_dir[3];      
    float           point[3];        
} TesseraPick;
typedef enum {
    TESSERA_SHADOW_NONE = 0,
    TESSERA_SHADOW_BLOB = 1,
    TESSERA_SHADOW_MAP  = 2
} TesseraShadowMode;
typedef struct { TesseraBytes sprite; } TesseraDiceFace;
typedef struct {
    const TesseraDiceFace* faces;
    size_t                 face_count;
    float                  size;
    float                  tint[4];
} TesseraDiceDef;
typedef struct {
    TesseraDefId visible_atlas;  TesseraRect visible_uv;  
    TesseraDefId hidden_atlas;   TesseraRect hidden_uv;   
    TesseraDefId back_atlas;     TesseraRect back_uv;     
    float width;         
    float height;        
    float thickness;     
    float corner_radius; 
    float tint[4];
} TesseraCardDef;