bindings/dart/lib/src/ffi.dart

// ffi.dart — dart:ffi binding for the Tessera renderer.
//
// Struct layouts mirror include/tessera.h EXACTLY. The canonical layout
// reference (sizeof of every struct + offsetof of every field) is the C
// self-test tests/test_ffi_layout.c; run it and cross-check if you touch
// anything here. The ABI in include/tessera.h is FROZEN — evolution is
// append-only, so appending new trailing fields is safe but reordering /
// resizing existing ones is not.
//
// dart:ffi lays structs out with the platform C ABI (natural alignment, LP64:
// pointers/IntPtr/Size = 8 bytes, enums = Int32, bool = 1 byte, float = 4),
// so declaring the fields in header order reproduces the C layout without
// manual padding.

import 'dart:ffi';

import 'package:ffi/ffi.dart';

import 'library.dart';

// ======================================================================
//  Handles & enums
// ======================================================================
final class TesseraEngine extends Opaque {}

// TesseraDefId is uint32 (0 = invalid/none); TesseraEntityId is uint64.
// Represented as plain Dart ints at the call sites.

/// enum TesseraLogLevel { TRACE=0, DEBUG=1, INFO=2, WARN=3, ERROR=4 }
abstract final class TesseraLogLevel {
  static const int trace = 0, debug = 1, info = 2, warn = 3, error = 4;
}

/// enum TesseraEmitMode { BURST=0, CONTINUOUS=1 }
abstract final class TesseraEmitMode {
  static const int burst = 0, continuous = 1;
}

/// enum TesseraBlendMode { ALPHA=0, ADD=1 }
abstract final class TesseraBlendMode {
  static const int alpha = 0, add = 1;
}

/// enum TesseraShadowMode { NONE=0, BLOB=1, MAP=2 }
abstract final class TesseraShadowMode {
  static const int none = 0, blob = 1, map = 2;
}

// void (*TesseraLogFn)(void* userdata, int level, const char* msg)
typedef TesseraLogFnC = Void Function(Pointer<Void>, Int32, Pointer<Utf8>);

// ======================================================================
//  Lifecycle / config
// ======================================================================
final class TesseraConfig extends Struct {
  external Pointer<Void> nativeWindow; // NULL => engine creates its own window
  @Int32()
  external int width;
  @Int32()
  external int height;
  @Float()
  external double pixelDensity;
  @Bool()
  external bool engineDrivenLoop;
  @Bool()
  external bool debug;
  external Pointer<NativeFunction<TesseraLogFnC>> log; // optional; NULL => stderr
  external Pointer<Void> logUserdata;
}

// ======================================================================
//  Assets & definitions
// ======================================================================
final class TesseraBytes extends Struct {
  external Pointer<Void> data; // NULL => load from `path`
  @Size()
  external int size;
  external Pointer<Utf8> path;
  external Pointer<Utf8> debugName;
}

final class TesseraRect extends Struct {
  @Float()
  external double u0;
  @Float()
  external double v0;
  @Float()
  external double u1;
  @Float()
  external double v1;
}

final class TesseraTileDef extends Struct {
  @Uint32()
  external int atlas; // 0 = untextured / white
  external TesseraRect top;
  external TesseraRect side;
  external TesseraRect bottom;
  @Array(4)
  external Array<Float> tint; // RGBA multiply
  @Float()
  external double thickness; // relative tile height (default 0.25)
}

final class TesseraEntityDef extends Struct {
  external TesseraBytes gltf;
  @Uint32()
  external int atlas; // 0 = texture from gltf
  @Float()
  external double scale;
  @Array(3)
  external Array<Float> pivot; // feet anchor (model space)
  // Named clip roles resolved against clips in the gltf; -1 = unset.
  @Int32()
  external int defaultAnim;
  @Int32()
  external int moveAnim;
  @Int32()
  external int spawnAnim;
  @Int32()
  external int despawnAnim;
  // Linked effects played on spawn / despawn; 0 = none.
  @Uint32()
  external int onSpawnEffect;
  @Uint32()
  external int onDespawnEffect;
}

final class TesseraParticleSpec extends Struct {
  @Uint32()
  external int atlas; // 0 = white quad
  external TesseraRect sprite;
  @Int32()
  external int mode; // TesseraEmitMode
  @Uint32()
  external int count; // burst count, or rate/sec if continuous
  @Float()
  external double lifetimeS;
  @Float()
  external double lifetimeVar;
  @Float()
  external double speed;
  @Float()
  external double speedVar;
  @Float()
  external double spreadDeg;
  @Float()
  external double gravity;
  @Float()
  external double sizeStart;
  @Float()
  external double sizeEnd;
  @Array(4)
  external Array<Float> colorStart;
  @Array(4)
  external Array<Float> colorEnd;
  @Int32()
  external int blend; // TesseraBlendMode
  @Float()
  external double durationS; // 0 => one-shot burst
}

final class TesseraEffectDef extends Struct {
  external TesseraParticleSpec onAdd;
  external TesseraParticleSpec onRemove;
}

/// A card type. Each face references a registered atlas id (0 => white) plus the
/// sub-rect to use. [hiddenAtlas]/[backAtlas] are typically shared across a deck.
/// Dimensions are world units; <= 0 selects a default (a slab a little smaller
/// than 2x3 tiles). [tint] multiplies all faces.
final class TesseraCardDef extends Struct {
  @Uint32()
  external int visibleAtlas;
  external TesseraRect visibleUv;
  @Uint32()
  external int hiddenAtlas;
  external TesseraRect hiddenUv;
  @Uint32()
  external int backAtlas;
  external TesseraRect backUv;
  @Float()
  external double width;
  @Float()
  external double height;
  @Float()
  external double thickness;
  @Float()
  external double cornerRadius;
  @Array(4)
  external Array<Float> tint;
}

// ======================================================================
//  Dice
// ======================================================================
/// One face of a die: an encoded sprite image (shown centred on / filling it).
final class TesseraDiceFace extends Struct {
  external TesseraBytes sprite;
}

/// A die type. [faces] points at [faceCount] sprites (face index 0..count-1);
/// [faceCount] must be >= 2. [size] is the bounding diameter (<=0 => 1.0);
/// [tint] multiplies the sprites (all-zero => white).
final class TesseraDiceDef extends Struct {
  external Pointer<TesseraDiceFace> faces;
  @Size()
  external int faceCount;
  @Float()
  external double size;
  @Array(4)
  external Array<Float> tint;
}

// ======================================================================
//  Immutable state
// ======================================================================
final class TesseraCoord extends Struct {
  @Int32()
  external int x;
  @Int32()
  external int y;
}

/// Continuous board position: whole numbers land on tile centres, fractions
/// interpolate — (0.5, 0.5) is the corner shared by tiles (0,0) and (1,1).
final class TesseraCoordF extends Struct {
  @Float()
  external double x;
  @Float()
  external double y;
}

final class TesseraTilePlacement extends Struct {
  external TesseraCoord coord;
  @Uint32()
  external int tileDef; // 0 = no tile (hole)
  @Uint32()
  external int variant;
  @Uint64()
  external int id; // optional per-tile instance id (0 = none)
}

final class TesseraEntityPlacement extends Struct {
  @Uint64()
  external int id; // stable across states; diff key
  @Uint32()
  external int def;
  external TesseraCoord coord;
  @Uint16()
  external int facing; // 0..3 quadrant
  @Uint32()
  external int anim; // active clip index
  external Pointer<TesseraCoord> path; // multi-step waypoints (null => single move)
  @Uint32()
  external int pathCount;
}

final class TesseraEffectPlacement extends Struct {
  @Uint64()
  external int id;
  @Uint32()
  external int def;
  external TesseraCoord coord;
  @Uint64()
  external int attachEntityId; // 0 = anchored to tile coord
}

/// A die in the scene. A placement that newly appears (by id) is thrown; one
/// that vanishes fades out. Changing def/face/seed/position re-throws it.
final class TesseraDicePlacement extends Struct {
  @Uint64()
  external int id;
  @Uint32()
  external int def;
  @Uint32()
  external int face;
  @Array(3)
  external Array<Float> position;
  @Uint32()
  external int seed;
  @Float()
  external double throwS;
}

/// A card in the scene. [orientation] is a quaternion (xyzw; all-zero =>
/// identity, which lays it flat, front up). [hidden] shows the concealing front
/// (crossfades when toggled). If [hand] is non-zero the card is arranged by that
/// hand's fan ([position]/[orientation] ignored); [handSlot] orders it.
final class TesseraCardPlacement extends Struct {
  @Uint64()
  external int id;
  @Uint32()
  external int def;
  @Array(3)
  external Array<Float> position;
  @Array(4)
  external Array<Float> orientation;
  @Bool()
  external bool hidden;
  @Uint64()
  external int hand; // 0 => free placement
  @Uint32()
  external int handSlot;
  @Uint64()
  external int sourceDraw; // 0 => none; deal-from-pile spawn source
  external Pointer<Float> path; // multi-step waypoints, 3 floats each (null => single move)
  @Uint32()
  external int pathCount;
}

/// A pile of cards drawn as one slab (thickness tracks [count], tweens on
/// change). Top face shows the def's visible (or hidden when [topHidden]);
/// bottom always shows the def's hidden texture.
final class TesseraCardDrawPlacement extends Struct {
  @Uint64()
  external int id;
  @Uint32()
  external int def;
  @Array(3)
  external Array<Float> position;
  @Array(4)
  external Array<Float> orientation;
  @Uint32()
  external int count;
  @Bool()
  external bool topHidden;
}

/// A hand: fans out the cards whose [TesseraCardPlacement.hand] equals its id.
/// [orientation] is a quaternion; identity faces the fronts toward +Z and
/// spreads along +X. spread/radius/spacing default when <= 0.
final class TesseraHandPlacement extends Struct {
  @Uint64()
  external int id;
  @Array(3)
  external Array<Float> position;
  @Array(4)
  external Array<Float> orientation;
  @Float()
  external double spreadDeg;
  @Float()
  external double radius;
  @Float()
  external double cardSpacing;
}

final class TesseraCamera extends Struct {
  external TesseraCoordF focus;
  @Float()
  external double distance;
  @Float()
  external double yaw; // radians
  @Float()
  external double pitch; // radians
  @Float()
  external double fov; // vertical fov, radians
}

final class TesseraState extends Struct {
  external Pointer<TesseraTilePlacement> tiles;
  @Size()
  external int tileCount;
  external Pointer<TesseraEntityPlacement> entities;
  @Size()
  external int entityCount;
  external Pointer<TesseraEffectPlacement> effects;
  @Size()
  external int effectCount;
  external TesseraCamera camera;
  @Uint64()
  external int epoch; // optional caller sequence number
  // Appended after epoch so the offsets above stay stable.
  external Pointer<TesseraCardPlacement> cards;
  @Size()
  external int cardCount;
  external Pointer<TesseraCardDrawPlacement> cardDraws;
  @Size()
  external int cardDrawCount;
  external Pointer<TesseraHandPlacement> hands;
  @Size()
  external int handCount;
  external Pointer<TesseraDicePlacement> dice;
  @Size()
  external int diceCount;
}

// ======================================================================
//  Picking (screen ray -> scene)
// ======================================================================
final class TesseraPick extends Struct {
  @Bool()
  external bool hitTile;
  external TesseraCoord tile;
  @Float()
  external double tileDistance;
  @Bool()
  external bool hitEntity;
  @Uint64()
  external int entity;
  @Float()
  external double entityDistance;
  @Array(3)
  external Array<Float> rayOrigin;
  @Array(3)
  external Array<Float> rayDir;
  @Array(3)
  external Array<Float> point;
}
